# ferro-ta

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  PACKAGING.md  PERFORMANCE_ROADMAP.md  PLATFORMS.md  README.md  RELEASE.md  SECURITY.md  TA_LIB_COMPATIBILITY.md  TROUBLESHOOTING.md  VERSIONING.md  deny.toml  pyproject.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  indicator_request.md
.github/workflows/: CI.yml  ci-docs.yml  ci-flutter.yml  ci-python.yml  ci-rust.yml  ci-wasm.yml  flutter-publish.yml  nightly-bench.yml  release.yml  wasm-publish.yml
api/: Dockerfile  main.py  requirements.txt
benchmarks/: README.md  __init__.py  bench_backtest.py  bench_batch.py  bench_derivatives_compare.py  bench_gpu.py  bench_simd.py  bench_streaming.py  bench_vs_talib.py  benchmark_table.py  check_hotspot_regression.py  check_vs_talib_regression.py  data_generator.py  metadata.py  profile_runtime_hotspots.py  results.json  run_perf_contract.py  test_accuracy.py  test_benchmark_suite.py  test_derivatives_speed.py  test_speed.py  wrapper_registry.py
benchmarks/fixtures/: canonical_ohlcv.npz  generate_canonical.py
conda/: meta.yaml
crates/ferro_ta_core/: Cargo.toml  README.md
crates/ferro_ta_core/benches/: indicators.rs
crates/ferro_ta_core/src/: aggregation.rs  alerts.rs  attribution.rs  backtest.rs  batch.rs  chunked.rs  commission.rs  crypto.rs  currency.rs  cycle.rs  extended.rs  lib.rs  math.rs  math_ops.rs  momentum.rs  overlap.rs  pattern.rs  portfolio.rs  price_transform.rs  regime.rs  resampling.rs  signals.rs  simd.rs  statistic.rs  streaming.rs  volatility.rs  volume.rs
crates/ferro_ta_core/src/futures/: basis.rs  curve.rs  mod.rs  roll.rs  synthetic.rs
crates/ferro_ta_core/src/options/: american.rs  chain.rs  digital.rs  greeks.rs  iv.rs  mod.rs  normal.rs  payoff.rs  pricing.rs  realized_vol.rs  surface.rs
docs/: adjacent_tooling.rst  agentic.md  api_manifest.json  architecture.md  batch.rst  benchmarks.rst  changelog.rst  conf.py  contributing.rst  derivatives-analytics.md  derivatives.rst  error_handling.rst  extended.rst  gpu-backend.md  index.rst  mcp.md  migration_talib.rst  options-volatility.md  out-of-core.md  pandas_api.rst  performance.md  plugin-catalog.md  plugins.rst  quickstart.rst  rust_first.md  stability.md  streaming.rst  support_matrix.rst
docs/adr/: 0001-cargo-audit-removal.md  0002-mcp-optional-feature.md  0003-gpu-backend-optional.md  0004-dtw-algorithm-choice.md  0005-ta-lib-compatibility-classes.md  0006-cpu-coverage-strategy.md  README.md
docs/api/: analysis.rst  batch.rst  cycle.rst  exceptions.rst  extended.rst  index.rst  math_ops.rst  momentum.rst  overlap.rst  pattern.rst  price_transform.rst  statistic.rst  streaming.rst  volatility.rst  volume.rst
docs/compatibility/: finta.md  pandas_ta.md  ta.md  talib.md  tulipy.md
docs/guides/: dtw.md  simd.md
examples/: README.md  backtesting.ipynb  custom_indicator.py  quickstart.ipynb  streaming.ipynb
flutter/: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
flutter/android/: build.gradle
flutter/ios/: ferro_ta.podspec
flutter/lib/: ferro_ta.dart  ferro_ta_web.dart
flutter/linux/: CMakeLists.txt
flutter/macos/: ferro_ta.podspec
flutter/rust/: Cargo.toml
flutter/rust/src/: lib.rs
flutter/rust/src/api/: indicators.rs  mod.rs
flutter/rust/tests/: api_parity.rs
flutter/windows/: CMakeLists.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_atr.rs  fuzz_bbands.rs  fuzz_ema.rs  fuzz_macd.rs  fuzz_mfi.rs  fuzz_rsi.rs  fuzz_sma.rs  fuzz_stoch.rs  fuzz_wma.rs
perf-contract/: batch.json  indicator_latency.json  manifest.json  runtime_hotspots.json  simd.json  streaming.json
python/ferro_ta/: __init__.py  __init__.pyi  _binding.py  _indicator_manifest.yaml  _utils.py  logging_utils.py  utils.py
scripts/: build_api_manifest.py  build_flutter_bridge.py  bump_version.py  check_api_manifest.py  check_changelog.py  pre_push_checks.sh
src/: lib.rs  validation.rs
src/aggregation/: mod.rs
src/alerts/: mod.rs
src/attribution/: mod.rs
src/backtest/: commission.rs  currency.rs  mod.rs
src/batch/: mod.rs
src/chunked/: mod.rs
src/crypto/: mod.rs
src/cycle/: common.rs  ht_dcperiod.rs  ht_dcphase.rs  ht_phasor.rs  ht_sine.rs  ht_trendline.rs  ht_trendmode.rs  mod.rs
src/extended/: mod.rs
src/futures/: basis.rs  curve.rs  mod.rs  roll.rs  synthetic.rs
src/math_ops/: mod.rs
src/momentum/: adx.rs  apo.rs  aroon.rs  bop.rs  cci.rs  cmo.rs  mfi.rs  mod.rs  mom.rs  ppo.rs  roc.rs  rsi.rs  stoch.rs  stochf.rs  stochrsi.rs  trix.rs  ultosc.rs  willr.rs
src/options/: american.rs  chain.rs  digital.rs  greeks.rs  iv.rs  mod.rs  payoff.rs  pricing.rs  realized_vol.rs  surface.rs
src/overlap/: bbands.rs  dema.rs  ema.rs  kama.rs  ma_mavp.rs  macd.rs  macdext.rs  mama.rs  midpoint.rs  midprice.rs  mod.rs  sar.rs  sarext.rs  sma.rs  t3.rs  tema.rs  trima.rs  wma.rs
src/pattern/: cdl2crows.rs  cdl3blackcrows.rs  cdl3inside.rs  cdl3linestrike.rs  cdl3outside.rs  cdl3starsinsouth.rs  cdl3whitesoldiers.rs  cdlabandonedbaby.rs  cdladvanceblock.rs  cdlbelthold.rs  cdlbreakaway.rs  cdlclosingmarubozu.rs  cdlconcealbabyswall.rs  cdlcounterattack.rs  cdldarkcloudcover.rs  cdldoji.rs  cdldojistar.rs  cdldragonflydoji.rs  cdlengulfing.rs  cdleveningdojistar.rs  cdleveningstar.rs  cdlgapsidesidewhite.rs  cdlgravestonedoji.rs  cdlhammer.rs  cdlhangingman.rs  cdlharami.rs  cdlharamicross.rs  cdlhighwave.rs  cdlhikkake.rs  cdlhikkakemod.rs  cdlhomingpigeon.rs  cdlidentical3crows.rs  cdlinneck.rs  cdlinvertedhammer.rs  cdlkicking.rs  cdlkickingbylength.rs  cdlladderbottom.rs  cdllongleggeddoji.rs  cdllongline.rs  cdlmarubozu.rs  (+23 more)
src/portfolio/: mod.rs
src/price_transform/: mod.rs  (+4 more)
tests/: conftest.py
wasm/: Cargo.toml  README.md  bench.js  package.json
wasm/src/: lib.rs
(+125 files in other folders)
