[package]
name = "ferro_ta_core"
version = "1.0.3"
edition = "2021"
description = "Pure Rust core indicator library — no PyO3, no numpy dependency"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pratikbhadane24/ferro-ta"
homepage = "https://github.com/pratikbhadane24/ferro-ta#readme"
documentation = "https://docs.rs/ferro_ta_core"
keywords = ["technical-analysis", "trading", "indicators", "finance", "ta-lib"]
categories = ["finance", "mathematics"]

[lib]
name = "ferro_ta_core"
crate-type = ["lib"]

[dependencies]
wide = { version = "1.1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "indicators"
harness = false

[features]
wide = ["dep:wide"]
simd = ["wide"]
